[package]
name = "tokio-iocp"
version = "0.1.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com"]
readme = "README.md"
license = "MIT"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "fs", "iocp"]
repository = "https://github.com/Berrysoft/tokio-iocp"
edition = "2021"

[dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt"] }
windows-sys = { version = "0.36", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
] }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "net"] }
futures-util = "0.3"
tempfile = "3.3"
scopeguard = "1"
