[package]
name = "tokio-iocp"
version = "0.1.3"
authors = ["Berrysoft <Strawberry_Str@hotmail.com"]
readme = "README.md"
license = "MIT"
description = "IOCP support for the Tokio asynchronous runtime."
categories = ["asynchronous", "network-programming"]
keywords = ["async", "fs", "iocp"]
repository = "https://github.com/Berrysoft/tokio-iocp"
edition = "2021"

[dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt"] }
windows-sys = { version = "0.45", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
bytes = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "net"] }
futures-util = "0.3"
tempfile = "3.4"
