[package]
name = "tokio-iocp"
version = "0.2.2"
authors = ["Berrysoft <Strawberry_Str@hotmail.com"]
readme = "README.md"
license = "MIT"
description = "IOCP support for the Tokio asynchronous runtime."
categories = ["asynchronous", "network-programming"]
keywords = ["async", "fs", "iocp"]
repository = "https://github.com/Berrysoft/tokio-iocp"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
once_cell = "1"
tokio = { version = "1", features = ["rt"] }
windows-sys = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
aligned-array = "1"
bytes = { version = "1", optional = true }
criterion = { version = "0.5", optional = true }
widestring = "1"

[dev-dependencies]
tokio = { version = "1", features = ["fs", "io-util", "macros", "net"] }
futures-util = "0.3"
tempfile = "3.5"
criterion = { version = "0.5", features = ["async_tokio"] }

[[example]]
name = "net"
required-features = ["read_buf"]

[[bench]]
name = "fs"
harness = false
required-features = ["criterion"]

[[bench]]
name = "net"
harness = false
required-features = ["criterion"]

[features]
default = []
read_buf = []
nightly = ["read_buf"]
